unpackaged/main/default/objects/litify_docs__Node_Input_Junction__c/litify_docs__Node_Input_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction to Input from Input Group</description>
    <label>Merge Input Group Input Junction</label>
    <nameField>
        <displayFormat>Input Group-{0000}</displayFormat>
        <label>Merge Input Group Input Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Input Group Input Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>