unpackaged/main/default/objects/litify_docs__Node_Input_Junction__c/fields/litify_docs__Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input__c</fullName>
    <description>MasterDetail to Input</description>
    <inlineHelpText>MasterDetail to Input</inlineHelpText>
    <label>Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>Input Groups</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>