unpackaged/main/default/objects/litify_docs__Node_Input_Junction__c/fields/litify_docs__Node__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Node__c</fullName>
    <description>Master Detail to Input Group</description>
    <inlineHelpText>Master Detail to Input Group</inlineHelpText>
    <label>Input Group</label>
    <referenceTo>litify_docs__Node__c</referenceTo>
    <relationshipLabel>Inputs</relationshipLabel>
    <relationshipName>Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>