unpackaged/main/default/objects/litify_docs__Node_Input_Junction__c/fields/litify_docs__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Order__c</fullName>
    <description>Order of Input on Input Group</description>
    <inlineHelpText>Order of Input on Input Group</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>